# resnet8

./: .gitignore  AGENTS.md  README.md  deno.json  pyproject.toml  requirements.txt  resnet8_pytorch.py
.agents/commands/: prototype-to-long-run.md  refine-spec.md
.codex/: config.toml
.codex/agents/: explorer.toml  implementer.toml  opsx_apply.toml  opsx_archive.toml  opsx_bulk_archive.toml  opsx_continue.toml  opsx_explore.toml  opsx_ff.toml  opsx_new.toml  opsx_onboard.toml  opsx_sync.toml  opsx_verify.toml  researcher.toml
.github/workflows/: lint.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  (+1 more)
docs/: AGENT_TEAM.md  QUANTIZATION_ANALYSIS.md  refactor-evaluation-visualization-migration.md  wq_aq_accuracy_map.md
logs/: acc_baseline.json  acc_w5_per_channel.json  acc_w5_per_tensor.json  acc_w6_per_channel.json  acc_w6_per_tensor.json  acc_w8a8_per_channel.json  acc_w8a8_per_tensor.json  baseline_eval_pytorch_fp32.json  baseline_eval_pytorch_int8.json  baseline_weight_visualizer_summary.json  refactor_smoke_baseline.md
models/: resnet8.pt  resnet8_int8.pt  resnet8_int8_operations.json
playground/: README.md  __init__.py  quantization.py  weight_visualizer.py
resnet8/: __init__.py
scripts/: annotate_qdq_graph.py  calibration_utils.py  convert.py  convert_pytorch.py  evaluate.py  evaluate_pytorch.py  extract_operations.py  get_resnet8_intermediate.py  quantize_onnx.py  quantize_pytorch.py  validate_qlinearconv.py  validate_qlinearmatmul.py  visualize_graph.py
spec/: weight_visualizer.md
tests/: test_evaluation_adapters.py  test_evaluation_core.py  test_evaluation_parity.py  test_tensor_extractors.py
(+134 files in other folders)
