[project]
name = "resnet8-cifar10"
version = "1.2.0"
description = "ResNet8 CIFAR-10 model with conversion and quantization support"
requires-python = ">=3.12"

dependencies = [
    "tensorflow>=2.20.0",
    "onnx>=1.17.0",
    "tf2onnx @ git+https://github.com/onnx/tensorflow-onnx.git",
    "numpy>=1.26.4",
    "protobuf>=5.28.0",
    "onnxruntime>=1.23.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "onnx2torch>=1.5.15",
    "marimo>=0.15.5",
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow git+https:// direct references for tf2onnx
allow-direct-references = true

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.uv]
# This is a scripts-only project, not an installable package
package = false

# Override tf2onnx's outdated protobuf constraint (protobuf~=3.20)
# TensorFlow 2.20+ requires protobuf 5.x; tf2onnx works with newer versions
override-dependencies = [
    "protobuf>=5.28.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
